--- a/my_portfolio/style.css
+++ b/my_portfolio/style.css
@@ -1,40 +1,71 @@
-div div{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+nav{
+    width: 100%;
+    position: sticky !important;
+    left: 0;
+    top: 0;
+    box-shadow: 0px 5px 8px rgba(0,0,0,.5);
+    z-index: 10;
+}
+.navbar-brand{
+    font-weight: 600;
+}
+.nav-link{
+    color: white !important;
+    border-bottom: 1px solid white;
+}
+.nav-link:hover{
+    border-bottom: 1px solid white;
+}
+
+section{
+    width: 100%;
+    min-height: 100vh;
+}
+/* Home Section */
+#home{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,6)),url(./ak2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
     color: white;
-    background-color: aqua;
-    display:flex;
-    justify-content: center;
-
-    
+    flex-direction: column;
 }
-html{
-    background-color: rgb(155, 228, 171);
-}
-
-h2{
-    color: red;
-    
+#home p{
+    position: absolute;
+    top: 15%;
+    font-size: 100px;
+    opacity: 0;
+    animation: text 3s ease-in-out;
 }
 
-h4 {
-  text-decoration: underline;
+#home p:nth-child(1){
+    animation-delay: 0s;
+}
+#home p:nth-child(2){
+    animation-delay: 3s;
+}
+#home p:nth-child(3){
+    animation-delay: 6s;
+}
+#home p:nth-child(4){
+    animation-delay: 9s;
 }
 
-.head{
-    color: red;
-    background-color: rgb(225, 228, 21);
-}
-
-body{
-    text-align: justify;
-    flex-basis: 100%;
-    flex-grow: 1;
-}
-
-footer{
-    background-color: rgb(233, 244, 131);
-}
-
-a{
-    color: blue;
-  
+@keyframes text{
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
 }
