modified my_portfolio.html and style.css

--- a/my_portfolio/style.css
+++ b/my_portfolio/style.css
@@ -191,3 +191,24 @@ section {
         opacity: 0;
     }
 }
+
+/* Skills Section */
+
+#skills{
+    padding: 5%;
+    background: #e5e5e5;
+}
+#skills .container{
+    margin-top: 6%;
+    margin-bottom: 6%;
+}
+label{
+    font-size: 20px;
+}
+.progress{
+    height: 30px !important;
+    box-shadow: 2px 4px 5px gray, -2px -2px 5px white;
+}
+.progress:hover{
+    box-shadow: 2px 4px 5px white, -2px -2px 5px gray;
+}
