--- a/my_portfolio/style.css
+++ b/my_portfolio/style.css
@@ -212,3 +212,34 @@ label{
 .progress:hover{
     box-shadow: 2px 4px 5px white, -2px -2px 5px gray;
 }
+
+/* Project Section */
+
+
+#projects{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3%;
+    background: linear-gradient(75deg,skyblue,violet);
+}
+.carousel{
+    width: 80%;
+    height: 80vh;
+    box-shadow: 10px 20px 10px rgba(0, 0, 0, .4);
+}
+.carousel-item{
+    width: 100%;
+    height: 80vh;
+}
+@media screen and (max-width:576px) {
+    .carousel{
+        width: 80%;
+        height: 29vh;
+        box-shadow: 10px 20px 10px rgba(0, 0, 0, .4);
+    }
+    .carousel-item{
+    width: 100%;
+    height: 50vh;
+}
+}
