--- a/my_portfolio/style.css
+++ b/my_portfolio/style.css
@@ -194,52 +194,92 @@ section {
 
 /* Skills Section */
 
-#skills{
+#skills {
     padding: 5%;
     background: #e5e5e5;
 }
-#skills .container{
+
+#skills .container {
     margin-top: 6%;
     margin-bottom: 6%;
 }
-label{
+
+label {
     font-size: 20px;
 }
-.progress{
+
+.progress {
     height: 30px !important;
     box-shadow: 2px 4px 5px gray, -2px -2px 5px white;
 }
-.progress:hover{
+
+.progress:hover {
     box-shadow: 2px 4px 5px white, -2px -2px 5px gray;
 }
 
 /* Project Section */
 
 
-#projects{
+#projects {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 3%;
-    background: linear-gradient(75deg,skyblue,violet);
+    background: linear-gradient(75deg, skyblue, violet);
 }
-.carousel{
+
+.carousel {
     width: 80%;
     height: 80vh;
     box-shadow: 10px 20px 10px rgba(0, 0, 0, .4);
 }
-.carousel-item{
+
+.carousel-item {
     width: 100%;
     height: 80vh;
 }
+
 @media screen and (max-width:576px) {
-    .carousel{
+    .carousel {
         width: 80%;
         height: 29vh;
         box-shadow: 10px 20px 10px rgba(0, 0, 0, .4);
     }
-    .carousel-item{
-    width: 100%;
-    height: 50vh;
+
+    .carousel-item {
+        width: 100%;
+        height: 50vh;
+    }
 }
+
+/* Pricing Section */
+#pricing {
+    padding-top: 5%;
+}
+
+.card {
+    margin-top: 15%;
+}
+
+.card:hover {
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, .4);
+    transition: .2s;
+}
+
+
+/* Contect Section */
+
+#contact {
+    padding-top: 4%;
+    padding-bottom: 2%;
+    background-color: rgb(235, 210, 176);
+}
+
+#contact iframe {
+    box-shadow: 15px 20px 10px rgba(0, 0, 0, .4);
+}
+
+#contact h1 {
+    margin-bottom: 50px;
+    margin-top: 10px;
 }
